--- a/Application/Home/View/Edu/edulist.html
+++ b/Application/Home/View/Edu/edulist.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <!-- create by cm -->
+    <meta charset="utf-8">
     <link href="__PUBLIC__/css/home/listpage.css" rel="stylesheet" type="text/css">
     <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
-    <!-- create by cm -->
-    
-<meta charset="utf-8">
-<title>张家港工程项目协同创新服务平台</title>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
+    <title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
@@ -34,9 +35,9 @@
             </div>
         </div>
         <div class="rightmain">
-        	<div class="top-tip" style="border-bottom:1px dotted #ccc;padding-bottom:20px;
+            <div class="top-tip" style="border-bottom:1px dotted #ccc;padding-bottom:20px;
             margin-bottom:30px">
-            	<div id="page-title">
+                <div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">
                     教育培训
                 </div>
@@ -70,6 +71,7 @@
     
     <include file="Public/footer"/>
 
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 <script>
      $(function(){
