--- a/Application/Home/View/Expert/joinTeam.html
+++ b/Application/Home/View/Expert/joinTeam.html
@@ -4,8 +4,10 @@
     <!-- create by cm -->
 	<meta charset="UTF-8">
 	<title>张家港工程项目协同创新服务平台档</title>
-	<script src="__PUBLIC__/js/jquery.min.js"></script>
 	<link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+	 <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 	<style>
 		.link-main{
 		    width:600px;
@@ -120,6 +122,7 @@
 		</form>
 	</div>
 	<include file="Public/footer"/>
+	<script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 <script>
 	 $(function(){
