--- a/Application/Home/View/News/newslist.html
+++ b/Application/Home/View/News/newslist.html
@@ -1,20 +1,16 @@
 <!doctype html>
 <html>
 <head>
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <title>张家港工程项目协同创新服务平台</title>
+    
     <link href="__PUBLIC__/css/home/listpage.css" rel="stylesheet" type="text/css">
     <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
     <!-- create by cm -->
     
-    <!-- [if IE lt 10] -->
-        <style>
-            img{
-                border:none;
-            }
-        </style>
+     <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
-<meta charset="utf-8">
-<title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
@@ -41,9 +37,9 @@
             </div>
         </div>
         <div class="rightmain">
-        	<div class="top-tip" style="border-bottom:1px dotted #ccc;padding-bottom:20px;
+            <div class="top-tip" style="border-bottom:1px dotted #ccc;padding-bottom:20px;
             margin-bottom:30px">
-            	<div id="page-title">
+                <div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">
                     信息咨询
                 </div>
@@ -75,6 +71,7 @@
     
     <include file="Public/footer"/>
 
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 <script>
      $(function(){
