--- a/Application/Home/View/Personal/modify_research.html
+++ b/Application/Home/View/Personal/modify_research.html
@@ -4,16 +4,12 @@
     <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>
+
     <link rel="stylesheet" href="__PUBLIC__/css/home/personal.css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">
 
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <!-- [if IE lt 10] -->
-        <style>
-            img{
-                border: none;
-            }
-        </style>
+     <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
 </head>
 <body>
@@ -78,6 +74,8 @@
     </div>
  
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    
 </body>
 <script>
     $(function($){
