--- a/Application/Home/View/Personal/modify_team.html
+++ b/Application/Home/View/Personal/modify_team.html
@@ -4,16 +4,12 @@
     <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>
+    
     <link rel="stylesheet" href="__PUBLIC__/css/home/personal.css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">
-    <script src="__PUBLIC__/js/jquery.min.js"></script>  
-    <!-- [if IE lt 10] -->
-        <style>
-            img{
-                border: none;
-            }
-        </style>
-    <!-- [endif] -->  
+     <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 <body>
     <include file = "Public/person_nav" />
@@ -25,40 +21,6 @@
                 <label for="teamname">团队名称 </label>
                 <input class="line-input" type="text" id="teamname" name="teamname" value="{$info.teamname}"><span id="nameError" class="must"></span>
             </div>
-            <script>
-                $(function() {
-
-                    $('#my_team').addClass('focus').siblings().removeClass('focus');
-
-                    $('#teamname').change(function(event){
-                        if($('#teamname').val().trim() != ""){
-                            var teamname = $('#teamname').val();
-                            $.ajax({
-                                type:"post",
-                                url:"__ROOT__/index.php/Public/checkName",
-                                dataType:'json',
-                                data:{teamname:teamname}
-                                })
-                            .done(function(data) {
-                                console.log("success",data);
-                                if(data.code == 0){
-                                    $('#nameError').html("");
-                                }else{
-                                    $("#nameError").html("团队名已存在");
-                                }
-                            })
-                            .fail(function(XMLHttpRequest, textStatus, errorThrown){
-                                console.log("status = "+XMLHttpRequest.status);  // 200
-                                console.log("readyState = "+XMLHttpRequest.readyState); //4
-                                console.log("textStatus = "+textStatus);  //parsererror
-                            })
-                            .always(function() {
-                                console.log("complete");
-                            });
-                        }
-                    });
-                });
-            </script>
             <div class="line" style="text-align:center">
                 <p>团队logo (建议尺寸： 456 × 342 像素 仅限上传一张)</p>
                 <input type="file" name="img" id="logo" accept="image/*" />
@@ -99,6 +61,41 @@
         </div>
     </form>
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>  
+    <script>
+        $(function() {
+
+            $('#my_team').addClass('focus').siblings().removeClass('focus');
+
+            $('#teamname').change(function(event){
+                if($('#teamname').val().trim() != ""){
+                    var teamname = $('#teamname').val();
+                    $.ajax({
+                        type:"post",
+                        url:"__ROOT__/index.php/Public/checkName",
+                        dataType:'json',
+                        data:{teamname:teamname}
+                        })
+                    .done(function(data) {
+                        console.log("success",data);
+                        if(data.code == 0){
+                            $('#nameError').html("");
+                        }else{
+                            $("#nameError").html("团队名已存在");
+                        }
+                    })
+                    .fail(function(XMLHttpRequest, textStatus, errorThrown){
+                        console.log("status = "+XMLHttpRequest.status);  // 200
+                        console.log("readyState = "+XMLHttpRequest.readyState); //4
+                        console.log("textStatus = "+textStatus);  //parsererror
+                    })
+                    .always(function() {
+                        console.log("complete");
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 <script>
     $(function($){
