--- a/Application/Home/View/Public/loading.html
+++ b/Application/Home/View/Public/loading.html
@@ -2,13 +2,10 @@
 <html>
 <head>
     <!-- create by cm -->
-<<<<<<< HEAD
-    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
-=======
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
->>>>>>> 6f168db2d9d6c04c4a1ec6b82c92e5027bbe64b1
     <meta charset="utf-8">
     <title>张家港工程项目协同创新服务平台</title>
+
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <style>
         #body{
             width: 600px;
@@ -19,9 +16,11 @@
         }
         h1{
             color: #03DCF4;
-
         }
     </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
     
 <body>
