--- a/Application/Home/View/Signup/forgetPwd_step2.html
+++ b/Application/Home/View/Signup/forgetPwd_step2.html
@@ -3,10 +3,10 @@
 <head>
     <!-- create by cm -->
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
-    <script src="__PUBLIC__/js.jquery.min.js"></script>
-    
     <title>张家港工程项目协同创新服务平台</title>
+
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+    
     <style>
         .main{
             width:350px;
@@ -42,6 +42,9 @@
             font-size:16px;
         }
     </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 <body>
     <include file = "Public/nav"/>
@@ -64,5 +67,6 @@
         </div>
     </form>
     <include file = "Public/footer"/>
+    <script src="__PUBLIC__/js.jquery.min.js"></script>
 </body>
 </html>
