--- a/Application/Home/View/Expert/expert.html
+++ b/Application/Home/View/Expert/expert.html
@@ -2,9 +2,14 @@
 <html>
 <head>
     <!-- create by cm -->
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <title>张家港工程项目协同创新服务平台</title>
+    
     <link rel="stylesheet" href="__PUBLIC__/css/home/research.css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
     <style>
         .content{
             width:320px;
@@ -49,8 +54,6 @@
             color: #0F93A9;
         }
     </style>
-    <meta charset="utf-8">
-    <title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
@@ -201,6 +204,7 @@
         </table>
     </div>
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script>
         function waring(){
             alert("您不是专家用户，没有权限邀请组队");
