--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -3,9 +3,13 @@
 <head>
     <!-- create by cm -->
     <meta charset="utf-8">
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <title>张家港工程项目协同创新服务平台</title>
+    
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/listpage.css" type="text/css">
+     <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
     <style>
         .info-list{
             overflow: hidden;
@@ -68,7 +72,6 @@
             color: #e3439c;
         }
     </style>
-    <title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
@@ -89,8 +92,8 @@
             </div>
         </div>
         <div class="rightmain">
-        	<div class="top-tip">
-            	<div id="page-title">
+            <div class="top-tip">
+                <div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">专家信息</div>
                 <div id="position">
                     <a href="#">专家信息</a>
@@ -167,6 +170,7 @@
         </div>
     </div>
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script>
         function waring(){
             alert("您不是专家用户，没有权限邀请组队");
