--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,35 +3,13 @@
 <head>
     <!-- create by cm -->
     <meta charset="utf-8"> 
-    <script src="__PUBLIC__/js/jquery.js"></script>
-    <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <title>张家港工程项目协同创新服务平台</title>
     
+    <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+    
     <!-- [if IE lt 10] -->
-        <style>
-            div,a,img{
-                border: none;
-            }
-            .control{
-                position: absolute;
-                left: 50%;
-                margin-left: -65px;
-                top: 270px;
-            }
-
-            .control-btn{
-                float: left;
-                width: 13px;
-                height: 13px;
-                margin-left: 13px;
-                border: 1px solid transparent;
-                background: white;
-            }
-            .focus{
-                background: blue;
-            }
-        </style>
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
 </head>
 
@@ -132,6 +110,9 @@
     </div>
 
     <include file = "Public/footer" />
+
+    <script src="__PUBLIC__/js/jquery.js"></script>
+    
     <script>
         $(function(){
 
