--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <!-- create by cm -->
-    <script src="__PUBLIC__/js/jquery.js"></script>
-    <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/cooperation.css">
     <meta charset="utf-8">
     <title>张家港工程项目协同创新服务平台</title>
+    
+    <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/cooperation.css">
+     <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 
 <body>
@@ -50,7 +53,6 @@
                  <span>点击量：{$info.click}次</span>
             </div>
             <div id="news_content">
-                <img id="news_picture" src="__ROOT__/{$picture.picture}" alt="">
                 {$info.content}
             </div>
 
@@ -76,8 +78,9 @@
             </div>
         </div>
     </div>
-	<div style="clear:both"></div>
+    <div style="clear:both"></div>
     <include file="Public/footer"/>
+    <script src="__PUBLIC__/js/jquery.js"></script>
     <script>
         $(function(){
             $('#nav_news').addClass('nav_active').siblings().removeClass('nav_active');
