--- a/Application/Home/View/Public/joinTeam.html
+++ b/Application/Home/View/Public/joinTeam.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>张家港工程项目协同创新服务平台档</title>
-	<script src="__PUBLIC__/js/jquery.min.js"></script>
+
 	<link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <!-- create by cm -->
 	<style>
@@ -59,6 +59,9 @@
 			color: #fff;
 		}
 	</style>
+	<!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 <body>
 	<include file="Public/nav"/>
@@ -69,42 +72,6 @@
 				<span for="teamname">团队名</span>
 				<input type="text" id="teamname" name="teamname"><span id="tnameError" style="color:red;">*</span>
 			</div>
-			<script>
-                $(function() {
-                    $('#teamname').change(function(event){
-                    	console.log("into change");
-                        if($('#teamname').val().trim() != ""){
-                            var teamname = $('#teamname').val();
-                            $.ajax({
-                                type:"post",
-                                url:"__ROOT__/index.php/Public/checkName",
-                                dataType:'json',
-                                data:{
-                                	teamname:teamname,
-                                	leader:<?php echo session('uid'); ?> 
-                                }
-                                })
-                            .done(function(data) {
-                                console.log("success",data);
-                                if(data.code == 0){
-                                    $('#tnameError').html("团队名不正确");
-                                }else{
-                                    $("#tnameError").html("*");
-                                }
-                            })
-                            .fail(function(XMLHttpRequest, textStatus, errorThrown){
-                                console.log("status = "+XMLHttpRequest.status);  // 200
-                                console.log("readyState = "+XMLHttpRequest.readyState); //4
-                                console.log("textStatus = "+textStatus);  //parsererror
-                            })
-                            .always(function() {
-                                console.log("complete");
-                            });
-                        }
-                    });
-           			$('#nav_expert').addClass('active').siblings().removeClass('active'); 
-                });
-            </script>
 			<div class="textarea">
 				<span for="content">邀请说明</span>
 				<textarea name="content" id="content"></textarea>
@@ -121,5 +88,43 @@
 		</form>
 	</div>
 	<include file="Public/footer"/>
+
+	<script src="__PUBLIC__/js/jquery.min.js"></script>
+	<script>
+        $(function() {
+            $('#teamname').change(function(event){
+            	console.log("into change");
+                if($('#teamname').val().trim() != ""){
+                    var teamname = $('#teamname').val();
+                    $.ajax({
+                        type:"post",
+                        url:"__ROOT__/index.php/Public/checkName",
+                        dataType:'json',
+                        data:{
+                        	teamname:teamname,
+                        	leader:<?php echo session('uid'); ?> 
+                        }
+                        })
+                    .done(function(data) {
+                        console.log("success",data);
+                        if(data.code == 0){
+                            $('#tnameError').html("团队名不正确");
+                        }else{
+                            $("#tnameError").html("*");
+                        }
+                    })
+                    .fail(function(XMLHttpRequest, textStatus, errorThrown){
+                        console.log("status = "+XMLHttpRequest.status);  // 200
+                        console.log("readyState = "+XMLHttpRequest.readyState); //4
+                        console.log("textStatus = "+textStatus);  //parsererror
+                    })
+                    .always(function() {
+                        console.log("complete");
+                    });
+                }
+            });
+   			$('#nav_expert').addClass('active').siblings().removeClass('active'); 
+        });
+    </script>
 </body>
 </html>
