--- a/Application/Home/View/Public/link.html
+++ b/Application/Home/View/Public/link.html
@@ -4,7 +4,6 @@
     <!-- create by cm -->
 	<meta charset="UTF-8">
 	<title>张家港工程项目协同创新服务平台档</title>
-	<script src="__PUBLIC__/js/jquery.min.js"></script>
 	<link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
 	<style>
 		.link-main{
@@ -66,6 +65,9 @@
 			color: #fff;
 		}
 	</style>
+	<!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 <body>
 	<include file="Public/nav"/>
@@ -96,5 +98,6 @@
 		</form>
 	</div>
 	<include file="Public/footer"/>
+	<script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 </html>
