--- a/Application/Home/View/Public/login.html
+++ b/Application/Home/View/Public/login.html
@@ -87,11 +87,7 @@
         }
     </style>
     <!-- [if IE lt 10] -->
-        <style>
-            img{
-                border:none;
-            }
-        </style>
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
 </head>
 	
@@ -123,8 +119,5 @@
             </form>       
         </div>
     </div>
-	<script>
-           
-    </script>
 </body>
 </html>
