--- a/Application/Home/View/Result/resultlist.html
+++ b/Application/Home/View/Result/resultlist.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <!-- create by cm -->
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <title>张家港工程项目协同创新服务平台</title>
+    
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <link href="__PUBLIC__/css/home/listpage.css" rel="stylesheet" type="text/css">
     <style>
-        button{
+        button.result_link{
             background: #72CEDD;
             color: #FAFDFD;
             font-weight: 700;
@@ -15,7 +17,7 @@
             padding: 5px 10px;
             cursor: pointer;
         }
-        button:hover{
+        button.result_link:hover{
             background: #0F93A9;
             color: white;
         }
@@ -28,18 +30,9 @@
         }
     </style>
     
-    <!-- [if IE lt 9] -->
-        <style>
-            img{
-                border:none;
-            }
-            button{
-                padding: 2px 10px;
-            }
-        </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
-<meta charset="utf-8">
-<title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
@@ -68,13 +61,13 @@
             </div>
         </div>
         <div class="rightmain">
-        	<div class="top-tip">
-            	<div id="page-title">
+            <div class="top-tip">
+                <div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">
                     最新成果
                 </div>
                 <div id="position">
-                	<p>&nbsp;>科技成果</p>
+                    <p>&nbsp;>科技成果</p>
                     <a href="__ROOT__">首页</a>
                     <span>您的位置：</span>
                     <img src="__PUBLIC__/images/download_06.png">
@@ -102,11 +95,11 @@
                         <span class="publish_time">&nbsp;{$list.publish_time}</span>
                         <?php if (session('uid')): ?>
                             <a id="linkbutton" href="{:U('Public/link',array('linkType'=> 4,'id'=>$list['result_id']))}" target="_black">
-                                <button>我要联系</button>
+                                <button class="result_link">我要联系</button>
                             </a>
                         <?php else: ?>
                             <a id="linkbutton"  onclick="showLogin()">
-                                <button>我要联系</button>
+                                <button class="result_link">我要联系</button>
                             </a>
                         <?php endif ?>
                     </div>                           
@@ -118,6 +111,7 @@
         </div>
     </div>
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
 
 </body>
 <script>
