--- a/Application/Home/View/Signup/forgetPwd_step1.html
+++ b/Application/Home/View/Signup/forgetPwd_step1.html
@@ -3,8 +3,9 @@
 <head>
     <!-- create by cm -->
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <title>张家港工程项目协同创新服务平台</title>
+
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <style>
         .main{
             width:350px;
@@ -40,6 +41,9 @@
             font-size:16px;
         }
     </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 <body>
 
