--- a/Application/Home/View/Signup/forgetPwd_step3.html
+++ b/Application/Home/View/Signup/forgetPwd_step3.html
@@ -4,6 +4,7 @@
     <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>  
+
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <style>
         .main{
@@ -40,6 +41,9 @@
             font-size:16px;
         }
     </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 <body>
     <include file = "Public/nav"/>
