--- a/Application/Home/View/Signup/signup_expert.html
+++ b/Application/Home/View/Signup/signup_expert.html
@@ -4,8 +4,6 @@
     <!-- create by cm -->
 	<meta charset="UTF-8">
 	<title>专家注册</title>
-	<script src="__PUBLIC__/js/jquery.min.js"></script>
-	<script src="__PUBLIC__/js/signup.js"></script>
 	<link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">  
 	<link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <style>
@@ -13,12 +11,8 @@
 			width: 20px;
 		}
     </style>
-     <!-- [if IE lt 10] -->
-        <style>
-            img{
-                border:none;
-            }
-        </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
 </head>
 <body>
@@ -138,6 +132,8 @@
 		</div>
 	</form>
 	<include file = "Public/footer"/>
+	<script src="__PUBLIC__/js/jquery.min.js"></script>
+	<script src="__PUBLIC__/js/signup.js"></script>
 	<script>
 		$(function() {
 			$('#username').change(function(event){
