--- a/Application/Home/View/Team/team.html
+++ b/Application/Home/View/Team/team.html
@@ -2,11 +2,11 @@
 <html>
     <!-- create by cm -->
 <head>
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="__PUBLIC__/css/home/research.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <meta charset="utf-8">
     <title>张家港工程项目协同创新服务平台</title>
+    
+    <link rel="stylesheet" href="__PUBLIC__/css/home/research.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <style>
         button{
             background: #72CEDD;
@@ -23,6 +23,9 @@
             color: white;
         }
     </style>
+    <!-- [if IE lt 10] -->
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
+    <!-- [endif] -->
 </head>
 
 <body>
@@ -181,6 +184,7 @@
     </div>
     <include file="Public/footer" />
 
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 <script>
     $(function(){
