--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -3,10 +3,10 @@
 <head>
     <!-- create by cm -->
     <meta charset="utf-8">
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <title>张家港工程项目协同创新服务平台</title>
+    
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/listpage.css" type="text/css">
-    <title>张家港工程项目协同创新服务平台</title>
     <style>
         .info-list{
             overflow: hidden;
@@ -73,11 +73,7 @@
         }
     </style>
     <!-- [if IE lt 10] -->
-        <style>
-            img{
-                border:none;
-            }
-        </style>
+        <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
 </head>
 
@@ -117,8 +113,8 @@
             </div>
         </div>
         <div class="rightmain">
-        	<div class="top-tip">
-            	<div id="page-title">
+            <div class="top-tip">
+                <div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">团队信息</div>
                 <div id="position">
                     <a href="#">专家团队</a>
@@ -180,6 +176,7 @@
         </div>
     </div>
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script>
         function waring () {
             alert("只有专家用户有权限组建团队");
