--- a/Public/css/home/personal.css
+++ b/Public/css/home/personal.css
@@ -93,12 +93,11 @@ ul{
 	overflow: hidden;
 	clear: both;
 }
-
-#footerbox{ 
+/*#footerbox{ 
 	width: 100%;
 	background-image:url(../../images/footerbackground.png);
-/*	position: absolute;
-	bottom: 40px;*/
+	position: absolute;
+	bottom: 40px;
 }
 #footer{
 	width:1000px;
@@ -126,7 +125,7 @@ ul{
 	margin-top:27px; 
 	float:right; 
 	margin-left:15px;
-}
+}*/
 #bottombox{
 	width: 100%;
 	height: 40px;
@@ -141,6 +140,9 @@ ul{
 #bottom p{
 	font-size: 12px;
 }
-div#footerlist p:hover{
-	background-color: #999;
+#bottom a{
+	color: #234;
 }
+/*div#footerlist p:hover{
+	background-color: #999;
+}*/
